summit/css/general-summit-landing-page.css
/* ... */
.summit-hero-landing-short .summit-banner h1 {
    font-size: 7em;
}

@media all and (max-width: 500px) {
    .text-wrapper .title-box {
        font-size: 70%;
    }

    .summit-banner h1 {
        font-size: 9em;
    }

    .summit-hero-landing, .summit-hero-landing-short {
        height: 50vh;
    }
}

.summit-banner h5 {
    color: #fff;
    font-size: 2em;
    text-transform: uppercase;
}

.summit-banner h5 strong {
    max-width: 40%;
    display: inline-block;
    text-align: center;
    position: relative;
}

.summit-banner h5 span {
    width: 5em;
    height: 1em;
    display: inline-block;
    margin: 0 0.5em;
}

@media all and (max-width: 600px) {
    .summit-banner h5 span {
        width: 30%;
        margin: 0;
    }
}

@media all and (max-width: 400px) {
    .summit-banner h5 strong:before, .summit-banner h5 strong:after {
        margin-top: .2em;
    }

    .summit-banner h5 strong:after {
        right: 98%;
    }
}

.summit-banner h5 span.arrow.right {
    background: url("../images/arrow-right.svg") bottom left no-repeat;
    background-size: cover;
    background-position-y: 7px;
}

.summit-banner h5 span.arrow.left {
    background: url("../images/arrow-left.svg") bottom left no-repeat;
    background-size: cover;
    background-position-y: 7px;
}

.link.button-box .btn {
    background-color: #ed1944;
    font-size: 0.85em;
    padding: 1em;
    font-size: 0.9em;
}

.summit-hero-landing .nav li.button-box .btn:hover, .summit-hero-landing-short .nav li.button-box .btn:hover {
    background-color: #ed1944;
    color: #fff;
}

.summit-hero-landing .nav, .summit-hero-landing-short .nav {
    background: transparent;
}

.summit-hero-landing .nav li.link, .summit-hero-landing-short .nav li.link {
    border: none;
}

.summit-hero-landing .nav li.link a, .summit-hero-landing-short .nav li.link a {
    border: none;
    padding-left: 0;
    padding-right: 2em;
}

.summit-hero-landing .nav li.link a, .summit-hero-landing-short .nav li.link a.btn {
    padding: 1em;
}

.summit-hero-landing .nav li.link a:hover, .summit-hero-landing-short .nav li.link a:hover {
    color: #ffd602;
}

.summit-hero-landing .nav li.current a, .summit-hero-landing-short .nav li.current a {
    background: transparent;
    color: #ffd602;
}

.summit-hero-landing .navbar-toggle, .summit-hero-landing-short .navbar-toggle {
    margin-top: 0.5em;
}

.summit-hero-landing .collapse.in, .summit-hero-landing-short .collapse.in {
    width: 100%;
    background-color: #00468b;
    z-index: 999999;
    border: none;
}

@media all and (max-width: 767px) {
    #summit-main-nav .navbar-toggle {
        display: block !important;
    }

    .navbar-default .navbar-nav .open .dropdown-menu > li > a {
        color: #fff;
        padding: 0.2em 0;
    }

    .summit-hero-landing .navbar .nav, .summit-hero-landing-short .navbar .nav {
        padding: 0 1em;
    }

    .summit-hero-landing .navbar .link.button-box, .summit-hero-landing-short .navbar .link.button-box {
        position: relative;
        right: auto;
    }

    .summit-hero-landing .navbar .link.button-box .btn, .summit-hero-landing-short .navbar .link.button-box .btn {
        width: 100%;
    }

    .summit-hero-landing .navbar .link.button-box .btn i, .summit-hero-landing-short .navbar .link.button-box .btn i {
        margin-right: 1em;
    }

    .summit-hero-landing .navbar .nav > li > a, .summit-hero-landing-short .navbar .nav > li > a {
        padding: 0.5em 0;
    }

    .navbar-default ul.navbar-main > li > a i.fa-caret-down {
        display: inline-block;
    }

    .navbar-default ul.navbar-main > li.open > a i.fa-caret-down {
        display: none;
    }

    .navbar-default ul.navbar-main > li > a i.fa-caret-up {
        display: none;
    }

    .navbar-default ul.navbar-main > li.open > a i.fa-caret-down {
        display: inline-block;
    }

    /* keep open Other Summits */
    .navbar-default ul.navbar-main > li.other-summits a {
        background: transparent;
        color: #ffd602;
    }

    .navbar-default ul.navbar-main > li.other-summits .dropdown-menu {
        position: static;
        float: none;
        width: auto;
        margin: 0px;
        padding: 0px 10px;
        background-color: transparent;
        border: 0;
        -webkit-box-shadow: none;
        box-shadow: none;
        display: block;
    }

    .navbar-default ul.navbar-main > li.other-summits .dropdown-menu > li > a {
        color: #fff;
        padding: 0.2em 0;
    }
}

@media all and (min-width: 767px) {
    #summit-main-nav .navbar-toggle {
        display: none;
    }
}

@media all and (max-width: 767px) {
    #summit-main-nav .navbar-toggle {
        display: none;
    }

    .summit-hero-landing-short .navbar .link.button-box {
        position: relative;
        right: 0;
        margin: 0.5em 0;
    }
}

.collapse.in {
    position: relative;
    display: inline-block;
}

.text-wrapper.blue {
    position: absolute;
    bottom: 0;
    width: 100%;
    background-color: #00468b;

    /*margin: 0;*/
}

.text-wrapper.blue .highlight {
    max-width: 870px;
    margin: 0 auto;
    position: relative;
}

@media all and (max-width: 815px) {
    .text-wrapper.blue .highlight {
        max-width: 100%;
        height: auto;
        padding: 1em;
    }

    .text-wrapper.blue .highlight h5 {
        padding: 0;
        line-height: 1.4em;
    }

    .text-wrapper.blue .megaphone {
        display: none;
    }
}

.text-wrapper.blue h5 {
    color: #fff;
    padding-left: 5em;
    padding-bottom: 2em;
    padding-top: 0.75em;
    text-align: center;
}

.text-wrapper.blue h5 strong {
    color: #ffd602;
}

.text-wrapper.blue .megaphone {
    background: url("../images/megaphone.svg") center no-repeat;
    width: 10em;
    height: 10em;
    position: absolute;
    top: -4em;
    left: 0;
}
/* ... */

